--- a/app/src/main/res/drawable/tag_background.xml
+++ b/app/src/main/res/drawable/tag_background.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="50dp" />
-    <solid android:color="?attr/colorAccent" />
+    <solid android:color="?attr/colorSecondaryContainer" />
     <padding
         android:left="8dp"
         android:top="8dp"
