--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -9,9 +9,9 @@
     style="@style/background">
 
     <RelativeLayout
-        android:id="@+id/headerNav"
+        android:id="@+id/headerBar"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="60dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -33,10 +33,9 @@
             android:layout_margin="12dp"
             android:layout_toEndOf="@+id/btn_back"
             android:fontFamily="@font/lato_bold"
-            android:paddingBottom="6dp"
             android:layout_centerVertical="true"
             android:text="Edit Profile Information"
-            android:textSize="18sp" />
+            android:textSize="20sp" />
     </RelativeLayout>
 
     <TextView
@@ -50,7 +49,7 @@
         android:paddingBottom="8dp"
         app:layout_constraintBottom_toTopOf="@id/et_username"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_profilePic" />
+        app:layout_constraintTop_toBottomOf="@id/btn_changePicture" />
 
     <EditText
         android:id="@+id/et_username"
@@ -60,6 +59,7 @@
         android:inputType="text"
         android:textSize="16sp"
         android:hint="John Doe"
+        android:textColorHighlight="@color/pale_blue"
         android:layout_marginHorizontal="12dp"
         android:layout_marginBottom="16dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -88,6 +88,7 @@
         android:inputType="textEmailAddress"
         android:hint="Email Address"
         android:textSize="16sp"
+        android:textColorHighlight="@color/pale_blue"
         android:layout_marginHorizontal="12dp"
         android:layout_marginBottom="16dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -114,8 +115,9 @@
         android:layout_height="wrap_content"
         android:background="@drawable/rounded_corners"
         android:inputType="textVisiblePassword"
-        android:textSize="18sp"
-        android:hint="New Password"
+        android:hint="Current Password"
+        android:textSize="16sp"
+        android:textColorHighlight="@color/pale_blue"
         android:layout_marginHorizontal="12dp"
         android:layout_marginBottom="16dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -126,15 +128,30 @@
         android:id="@+id/iv_profilePic"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:layout_marginVertical="48dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="12dp"
         android:scaleType="centerCrop"
         android:src="@drawable/default_pfp"
         app:civ_border_color="@color/primary_blue"
         app:civ_border_width="2dp"
-        app:layout_constraintBottom_toTopOf="@id/tv_username"
+        app:layout_constraintBottom_toTopOf="@id/btn_changePicture"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/headerNav" />
+        app:layout_constraintTop_toBottomOf="@id/headerBar" />
+
+    <Button
+        android:id="@+id/btn_changePicture"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Change Avatar"
+        android:textSize="14sp"
+        android:visibility="invisible"
+        android:clickable="false"
+        style="@style/button_blue"
+        app:layout_constraintBottom_toTopOf="@+id/tv_username"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/iv_profilePic" />
 
     <Button
         android:id="@+id/btn_save"
@@ -143,6 +160,7 @@
         android:layout_marginHorizontal="12dp"
         android:layout_marginBottom="12dp"
         style="@style/button_blue"
+        android:focusable="false"
         android:text="Save"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
