--- a/app/src/main/res/layout/activity_post_details.xml
+++ b/app/src/main/res/layout/activity_post_details.xml
@@ -24,6 +24,19 @@
             android:layout_centerVertical="true"
             android:layout_margin="12dp"
             android:src="@drawable/arrow_back_24px" />
+
+        <ImageView
+            android:id="@+id/post_menu"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/more_vert_24px"
+            android:contentDescription="Post Menu"
+            android:clickable="true"
+            android:focusable="true"
+            android:visibility="invisible"
+            android:layout_margin="12dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true" />
     </RelativeLayout>
 
     <TextView
@@ -33,8 +46,9 @@
         android:layout_marginHorizontal="12dp"
         android:layout_marginBottom="6dp"
         android:paddingTop="4dp"
-        android:textSize="24sp"
+        android:textSize="22sp"
         android:fontFamily="@font/lato_bold"
+        android:textIsSelectable="true"
         app:layout_constraintBottom_toTopOf="@id/tv_dateTime"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -88,6 +102,7 @@
         android:layout_margin="12dp"
         android:layout_marginTop="12dp"
         android:textSize="16sp"
+        android:textIsSelectable="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/iv_profilePic"
