--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -5,8 +5,9 @@
         <item name="colorPrimary">@color/primary_blue</item>
         <item name="android:fontFamily">@font/lato_regular</item>
         <item name="android:textColor">@color/pale_white</item>
-        <item name="colorAccent">@color/accent_black</item>
+        <item name="colorAccent">@color/primary_blue</item>
         <item name="colorPrimaryContainer">@color/accent_black</item>
+        <item name="colorSecondaryContainer">@color/accent_black</item>
         <item name="colorControlNormal">@color/pale_white</item>
     </style>
 
@@ -18,9 +19,11 @@
         <item name="android:background">@color/primary_black</item>
     </style>
 
-    <style name="button">
+    <style name="button_blue">
         <item name="android:background">@drawable/rounded_button_solid</item>
         <item name="android:fontFamily">@font/lato_bold</item>
+        <item name="android:backgroundTint">@color/primary_blue</item>
+        <item name="android:textColor">@color/pale_white</item>
     </style>
 
     <style name="logo">
