--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="primary_blue">#55A4FF</color>
+    <color name="pale_blue">#A7C7FA</color>
     <color name="pale_white">#EFEFEF</color>
     <color name="primary_black">#0A0C10</color>
     <color name="accent_black">#151720</color>
