--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,6 +7,7 @@
         <item name="android:textColor">@color/primary_black</item>
         <item name="colorAccent">@color/primary_blue</item>
         <item name="colorPrimaryContainer">@android:color/transparent</item>
+        <item name="colorSecondaryContainer">@color/primary_blue</item>
         <item name="colorControlNormal">@color/primary_black</item>
     </style>
 
